<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QuizX</string>
    <string name="title">Simple Quiz</string>
    <string name="action_settings">Settings</string>
    <string name="select_question_type">Select question type</string>
    <string name="hello_world">Hello world!</string>
    <string name="history_button">History</string>
    <string name="geography_button">Geography</string>
    <string name="science_button">Science</string>   
    <string name="maths_button">Maths</string>
    <string name="maths_question_title">What is the result of the following calculation?</string>
    <string name="numeric">Numeric Question</string>
    <string name="maths_answer_text">Check</string>
    <string name="submit">Submit</string>
    <string name="overall_summary"></string>
</resources>
